# rust__the_book

./: .gitignore  README.md
birkin_config_play/: Cargo.toml
birkin_config_play/src/: main.rs
birkin_config_play_02/: Cargo.toml
birkin_config_play_02/src/: main.rs
birkin_logrotate_app_play/: Cargo.toml
birkin_logrotate_app_play/src/: main.rs
birkin_play/: Cargo.toml
birkin_play/src/: main.rs
birkin_sandbox/: Cargo.toml  log_list.json
birkin_sandbox/src/: main.rs
ch01_hello_cargo/: Cargo.toml
ch02_guessing_game/: Cargo.toml
ch03_branches/: Cargo.toml
ch03_loops/: Cargo.toml
ch03_variables/: Cargo.toml
ch04_ownership/: Cargo.toml
ch05_rectangles/: Cargo.toml
ch08_hashmaps/: Cargo.toml
ch09_errors/: Cargo.toml
ch09_panic_design/: Cargo.toml
ch10_traits/: Cargo.toml
ch11_adder/: Cargo.toml
ch12_minigrep/: Cargo.toml  output.txt
ch13_functional/: Cargo.toml
ch13b_functional/: Cargo.toml
ch13c_iterators/: Cargo.toml
ch13d_minigrep_better/: Cargo.toml
ch14_cargo/: Cargo.toml
ch14_iterators/: Cargo.toml
ch15_smart_pointers/: Cargo.toml
ch16_concurrency/: Cargo.toml
ch17_obj_ori/: Cargo.toml
ch18_patterns/: Cargo.toml
ch19_adv02_traits/: Cargo.toml
ch19_adv03_types/: Cargo.toml
ch19_adv04_functions/: Cargo.toml
ch19_unsafe/: Cargo.toml
ch20_web01/: Cargo.toml
ch20_web02_multithread/: Cargo.toml
ch20_web03_cleanup/: 404.html  Cargo.toml  hello.html
collections/: Cargo.toml
enums/: Cargo.toml
generics/: Cargo.toml
guessing_game/: Cargo.toml
restaurant/: Cargo.toml
strings/: Cargo.toml
(+57 files in other folders)
