[package]
name = "birkin_logrotate_app_play"
version = "0.1.0"
authors = ["birkin <birkin.diana@gmail.com>"]
edition = "2018"


## See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
#time = "0.1"
dotenv = "0.15.0"
env_logger = "0.7.1"
envy = "0.4"
log = "0.4.8"
serde = { version = "1.0.106", features = ["derive"] }
serde_json = "1.0.52"
